update website content

--- a/services.html
+++ b/services.html
@@ -185,7 +185,7 @@
         <div class="container">
             <!-- Container to center footer content -->
             
-            <p>&copy; 2026 Ailec's PetShop | Phone: +351 123 456 789</p>
+            <p>&copy; 2026 Ailec's PetShop | Phone: ++34 236 345 234</p>
             <!-- Copyright and phone number -->
             
             <p>Email: info@ailecsPetShop.com | Location: Barcelona</p>
